--- a/index.html
+++ b/index.html
@@ -238,10 +238,11 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				What started only as <a href="https://www.coursera.org/course/startup">class</a> project is evolving to a bitcoin fundraising site. My goal is to keep working on it and adding content to it while turning it into a fully featured fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support) and need to be build.<br>
-        Fundraising should peak in October 2013. As early buzz won't hurt, please preview herewith the project site.<br>
-        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations or donate for the water in desert delivery cause on bitstarter.<br>
-        There are no tiers of support, just pick a value or enter your own and send us a token of your appreciation.<!-- for more information-->.</p>
+				What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br> 
+        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over Australian desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. And those UAVs are going to be build.<br>
+        <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
+        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material as the fundraising accelerates.<br>
+        There are no tiers of support defined right now. We will not give away an free stuff or DIY plane kits. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet (that's also appreciated)<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
@@ -290,8 +291,8 @@
   						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
 							   When: All I know at the moment is "October". <br>
                  The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware is TauLabs fork of openpilot<br>
-                Tweets and backlinks are welcome. please use http://9to5passion.eu which is tracked by the leaderboard scoring system and is the main landing sites.<br>
-                 According to another theory the fundraising already started and will be relaunched every two weeks to keep it interesting.<br>
+                Tweets and backlinks are welcome. Please use http://9to5passion.eu which is associated in the <a href="http://startupmooc.org">leaderboard</a> scoring system and is the main landing site.<br>
+                 <i>According to another theory the fundraising already started and will be relaunched few two weeks to keep it interesting.</i> That way we will be able to compare periods of funding with each other.
 					 	   </div>
 					   </div>
 		    	</div>
