--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 							   When: All I know at the moment is "October". <br>
                  The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware is TauLabs fork of openpilot<br>
                 Tweets and backlinks are welcome. Please use http://9to5passion.eu which is associated in the <a href="http://startupmooc.org">leaderboard</a> scoring system and is the main landing site.<br>
-                 <i>According to another theory the fundraising already started and will be relaunched few two weeks to keep it interesting.</i> That way we will be able to compare periods of funding with each other.
+                 <i>The fundraising practically started and will be going on until the UAV competition. In the spirit of a short 'kickstarter' campaign we will most probably relaunch avery few two weeks to reset the cointers and keep it interesting aw we will approach milestones.</i> We would like to compare periods of funding to each other, reaching smaller goals one at a time. P.ex. crowdsourcing 1 x digital camera for improved prototype (instead of 3 x camera + 3 x boards & electronics & 3 x plane kits in one big bang we'll focus each round to a specific component).
 					 	   </div>
 					   </div>
 		    	</div>
@@ -305,7 +305,8 @@
 					</div>
 					<div id="collapseTwo" name="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
-							It will take off, fly over the desert and will be looking for a man sized figurine wearing yellow shirt and blue trousers. Once the target is identified, it will drop the bottle of water as close to it as possible (water must land within 100 meters of the target, preferably closer) and must return to the starting point. This is the reason of delivery by plane instead of a quadcopter like vehicle. 
+							It will take off, fly over the desert and search for a human (adult) sized figurine dressed in a yellow shirt and blue trousers. Once the target is identified & localized on a map, it will drop the payload (bottle of water) as close to it as possible. The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid). The plane must return to the starting point.<br>Delivery by plane is more effective then a quadcopter (or alike) thus the vehicle choice.
+              <br>Next experiments involve parachute tests for the water dropping. 
 						</div>
 					</div>
 				</div>
@@ -329,14 +330,36 @@
 						</div>
 					</div>
 				</div>		
+        <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+              Roadmap?
+              </a>
+            </div>
+            <div id="collapseFour" class="accordion-body collapse">
+               <div class="accordion-inner">
+                ATM:<br> 
+                - flights with the prototype, gathering aerial pictures of an area;<br>
+                - new parachutes tests, bottle dropping from a static elevated location and no flyght speed.<br>
+                Near future:<br>
+                - target recognition in the aerial pictures;<br>
+                - upgrade camera and do more tests.<br>
+                Less close future:<br>
+                - bottle release mechanism (actually dropping the bottle from the plane);<br>
+                - automation (#dronesdronesdrones).<br>
+                Distant future:<br>
+                - ask Kenn ;) probably the documentation release and mass public adoption
+               </div>
+             </div>
+        </div>
         <!-- repetitive area start -->
           <!--<div class="accordion-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseEnum">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
               Question?
               </a>
             </div>
-            <div id="collapseEnum" class="accordion-body collapse">
+            <div id="collapseFour" class="accordion-body collapse">
                <div class="accordion-inner">
                 Answer.
                </div>
