--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
     https://coinbase.com/api/doc
     -->
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
@@ -340,7 +340,7 @@
                <div class="accordion-inner">
                 ATM:<br> 
                 - flights with the prototype, gathering aerial pictures of an area;<br>
-                - new parachutes tests, bottle dropping from a static elevated location and no flyght speed.<br>
+                - new parachutes tests, bottle dropping from a static elevated location and zero flight speed.<br>
                 Near future:<br>
                 - target recognition in the aerial pictures;<br>
                 - upgrade camera and do more tests.<br>
