--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>UAV Bitstarter</title>
-    <!-- todo1 responsive design -->
+    <!-- todo1 responsive design in progress -->
     <!-- todo2 async flow control -->
     <!-- v3.1
     if you reed source code, you will find everything in the comments  
@@ -140,7 +140,6 @@
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
   						<li><a href="#about">About</a></li>
-  						<li><a href="#contact">Contact</a></li>
   						<li><a href="#faq">FAQ</a></li>
   					</ul>
   				</div>
@@ -162,11 +161,11 @@
   		</div>
   	</div>
 
-    <div class="row-fluid section">
+    <!--div class="row-fluid section">
       <div class="span10 offset1 asset">
         <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
       </div>
-    </div>
+    </div-->
 
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
@@ -238,11 +237,16 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
+          Imagine landed/crashed/get lost in the desert, thirsty with no water.<br>
+          Assuming you could tell your approximate location and outfit, this drone will wind you and drop you a bottle of water.<br>
+          <br>
+          How cool is that?<br>
+          Btw, the water would be cooled on delivery ;) <br> 
 				What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br> 
-        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over Australian desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. And those UAVs are going to be build.<br>
+        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over (Australian) desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. And you can support the development and construction of those UAVs.<br>
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
-        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material as the fundraising accelerates.<br>
-        There are no tiers of support defined right now. We will not give away an free stuff or DIY plane kits. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet (that's also appreciated)<!-- for more information-->.</p>
+        The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material as the fundraising accelerates.<br>
+        There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
