--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/#">UAV Bitstarter</a>
+  				<a class="brand" href="#">UAV Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
   						<li><a href="#about">About</a></li>
-  						<li><a href="#faq">FAQ</a></li>
+  						<li><a href="#contact">Contact</a></li>
   					</ul>
   				</div>
   			</div>
