--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>6</h3><p>backers (*)</p>
+  							<h3>10</h3><p>backers</p>
   						</div>
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$11.87</h3><p>of $3,000</p>
+  							<h3>$42</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -195,11 +195,12 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.01%;"></div>
-  					<div class="bar bar-warning" style="width: 99.99%;"></div>
-            <!-- $11.87 current coinbase balance 
-                  0.00395 % complete 
-                  properly rounded-->
+  					<div class="bar bar-success" style="width: 1.42%;"></div>
+  					<div class="bar bar-warning" style="width: 98.58%;"></div>
+            <!--  current coinbase balance history properly rounded
+                  $11.87  0.39566 %
+                  $42.62  1.42066 % 
+                  -->
   				</div>
   			</div>
 
@@ -228,25 +229,24 @@
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
   			</div>
-        <div class="span6 offset4">
+        <!-- div class="span6 offset4">
           <p><br><font color="white">(*) might not be accurate</font><a id="about"></a></p>
-        </div>
+        </div-->
   		</div>
   	</div>
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p>About:<br>
-          Imagine landed/crashed/get lost in the desert, thirsty with no water.<br>
-          Assuming you could tell your approximate location and outfit, this drone will wind you and drop you a bottle of water.<br>
+  			<p>Imagine you landed/crashed/are lost in the desert, thirsty with no water. It's hot there.<br>
+          Knowing your approximate location and outfit, this drone will wind you and drop you a bottle of water.<br>
           <br>
           How cool is that?<br>
-          Btw, the water would be cooled on delivery ;) <br> 
-				What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br> 
-        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over (Australian) desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. And you can support the development and construction of those UAVs.<br>
+          <br> 
+				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
+        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over (Australian) desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. Transporting 500 ml of water can be very efficiet using an UAV. And you can support the development and construction of those UAVs.<br>
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
-        The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material as the fundraising accelerates.<br>
-        There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.<!-- for more information-->.</p>
+        The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<!-- br>
+        There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
