--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p>Imagine you landed/crashed/are lost in the desert, thirsty with no water. It's hot there.<br>
-          Knowing your approximate location and outfit, this drone will wind you and drop you a bottle of water.<br>
+  			<p>Imagine you're lost in the desert, thirsty with no water. It's hot there.<br>
+          This UAVcould find you and drop you a bottle of water.<br>
           <br>
-          How cool is that?<br>
+          How cool would that be?<br>
           <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over (Australian) desert dropping bottled water on a target. This will simulate life support, delivering water to a person out there. Transporting 500 ml of water can be very efficiet using an UAV. And you can support the development and construction of those UAVs.<br>
+        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over desert dropping bottled water on a people in need. Transporting 500 ml of water can be very efficiet using this approach. And now you can support the development and construction of those UAVs.<br>
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<!-- br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
