--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   		</div>
   	</div>
 
-	<div class="row-fluid section2">
+	<div class="row-fluid section2"><a id="about"></a>
   		<div class="span5 offset1 copy copy-right">
   			<p>Imagine you're lost in the desert, thirsty with no water. It's hot there.<br>
           This UAVcould find you and drop you a bottle of water.<br>
