--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
         <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over desert dropping bottled water on a people in need. Transporting 500 ml of water can be very efficiet using this approach. And now you can support the development and construction of those UAVs.<br>
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
-        The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<!-- br>
+        <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
   		</div>
   		<div class="span5 asset">
@@ -295,8 +295,8 @@
   						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
 							   When: All I know at the moment is "October". <br>
                  The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware is TauLabs fork of openpilot<br>
-                Tweets and backlinks are welcome. Please use http://9to5passion.eu which is associated in the <a href="http://startupmooc.org">leaderboard</a> scoring system and is the main landing site.<br>
-                 <i>The fundraising practically started and will be going on until the UAV competition. In the spirit of a short 'kickstarter' campaign we will most probably relaunch avery few two weeks to reset the cointers and keep it interesting aw we will approach milestones.</i> We would like to compare periods of funding to each other, reaching smaller goals one at a time. P.ex. crowdsourcing 1 x digital camera for improved prototype (instead of 3 x camera + 3 x boards & electronics & 3 x plane kits in one big bang we'll focus each round to a specific component).
+                 <br>
+                 <i>The fundraising practically started and will be going on until the UAV competition (end of 2013). We will shorten probably the fundraising period to keep fundraising runs interesting to follow and wil reach the final goal in several milestones.
 					 	   </div>
 					   </div>
 		    	</div>
