--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$42</h3><p>of $3,000</p>
+  							<h3>$7.14</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -195,11 +195,12 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 1.42%;"></div>
-  					<div class="bar bar-warning" style="width: 98.58%;"></div>
+  					<div class="bar bar-success" style="width: 0.238%;"></div>
+  					<div class="bar bar-warning" style="width: 9.762%;"></div>
             <!--  current coinbase balance history properly rounded
                   $11.87  0.39566 %
                   $42.62  1.42066 % 
+                  $7.14   0.238 % correction on Day 2 of leaderboard
                   -->
   				</div>
   			</div>
