--- a/index.html
+++ b/index.html
@@ -261,15 +261,12 @@
   		<div class="span5 copy">
   			<p>
 				Thanks to:<br> 
-				<a href="http://stanford.edu">Stanford U</a> for <a href="http://www.stanford.edu/class/cs106a/">CS106a</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">more</a>;<br> 
-				<a href="https://www.coursera.org/">Coursera.org</a> for courses like this one;<br> 
-				<a href="http://www.strassen.lu/">Strassen comune</a> for the Luxembourg <a href="http://www.hackerspace.lu/">hackerspace</a>;<br> 
+				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a> for classes like this one (and<a href="http://www.stanford.edu/class/cs106a/">CS106a</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">...</a>;<br> 
+				<a href="http://www.strassen.lu/">Strassen</a> comune for the syn2cat hackerspace support.<br>
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
-				<a href="http://digmia.com/">digmia</a> for 
-				<a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
-				and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
+				<a href="http://digmia.com/">digmia</a> for resources;<br> and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
   			</p>
         <p><a id="contact"></a>
           Contact:<br>
