--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
-				<a href="http://digmia.com/">digmia</a> for resources;<br> and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
+				<a href="http://digmia.com/">digmia</a>.
   			</p>
         <p><a id="contact"></a>
           Contact:<br>
