--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
   		<div class="span5 copy">
   			<p>
 				Thanks to:<br> 
-				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a> for classes like this one (and<a href="http://www.stanford.edu/class/cs106a/">CS106a</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">...</a>;<br> 
-				<a href="http://www.strassen.lu/">Strassen</a> comune for the syn2cat hackerspace support.<br>
+				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a> for classes like this one (and<a href="http://www.stanford.edu/class/cs106a/">CS106a</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">...</a>);<br> 
+				<a href="http://www.strassen.lu/">Strassen</a> comune, Kenn, 
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
