--- a/index.html
+++ b/index.html
@@ -285,16 +285,15 @@
 	    		<div class="accordion-group">
 	    			<div class="accordion-heading">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-						  What and when will be bought?
+						  .the tools?
 						  </a>
 		   			</div>
 		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-  						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
-							   When: All I know at the moment is "October". <br>
-                 The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware is TauLabs fork of openpilot<br>
+  						  	What: For the competition we need to prepare multiple UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.<br>
+                 The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware TauLabs, boards openpilot (did I got this part right?)<br>
                  <br>
-                 <i>The fundraising practically started and will be going on until the UAV competition (end of 2013). We will shorten probably the fundraising period to keep fundraising runs interesting to follow and wil reach the final goal in several milestones.
+                 <i>The fundraising practically started and will be going on until the UAV competition (end of 2013). We will shorten probably the fundraising period to keep fundraising windows interesting to follow. We will probably aim toreach the final goal in several milestones. 
 					 	   </div>
 					   </div>
 		    	</div>
@@ -302,12 +301,12 @@
 				  <div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-						What exactly will the plane do?
+						.the challenge
 						</a>
 					</div>
 					<div id="collapseTwo" name="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
-							It will take off, fly over the desert and search for a human (adult) sized figurine dressed in a yellow shirt and blue trousers. Once the target is identified & localized on a map, it will drop the payload (bottle of water) as close to it as possible. The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid). The plane must return to the starting point.<br>Delivery by plane is more effective then a quadcopter (or alike) thus the vehicle choice.
+							To take off, fly over the desert and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified & localized on a map, drop the bottle of water as close to it as possible. The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid). The plane must return to the starting point.<br>Delivery by plane is more effective then a quadcopter (or alike) thus the vehicle choice.
               <br>Next experiments involve parachute tests for the water dropping. 
 						</div>
 					</div>
