--- a/index.html
+++ b/index.html
@@ -285,15 +285,14 @@
 	    		<div class="accordion-group">
 	    			<div class="accordion-heading">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-						  .the tools?
+						  .the tools
 						  </a>
 		   			</div>
 		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-  						  	What: For the competition we need to prepare multiple UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.<br>
-                 The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware TauLabs, boards openpilot (did I got this part right?)<br>
-                 <br>
-                 <i>The fundraising practically started and will be going on until the UAV competition (end of 2013). We will shorten probably the fundraising period to keep fundraising windows interesting to follow. We will probably aim toreach the final goal in several milestones. 
+                <p>
+  						  	For the competition we need to prepare multiple identical UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.<br>
+                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Currently making aerial pictures, testing antennas, gathering flight data. Firmware TauLabs, boards openpilot (did I got this part right?)</p>
 					 	   </div>
 					   </div>
 		    	</div>
@@ -314,14 +313,14 @@
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-						Why another bitcoin accepting site?
+						.why accepting bitcoins?
 						</a>
 					</div>
 					  <div id="collapseThree" class="accordion-body collapse">
 						  <div class="accordion-inner">
                 <ul>
                 <li>works over tcp/ip</li>
-                <li>ideal internet money (no need to handle any physical representation ever)</li>
+                <li>ideal internet money (no physical representation)</li>
                 <li>modern (resonates well with UAV)</li>
                 <li>it's part of the assignment</li>
                 <li>easy to use (thx Coinbase and others)</li>
