--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-						.why accepting bitcoins?
+						.why accepting bitcoins
 						</a>
 					</div>
 					  <div id="collapseThree" class="accordion-body collapse">
@@ -333,22 +333,22 @@
         <div class="accordion-group">
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-              Roadmap?
+              .roadmap
               </a>
             </div>
             <div id="collapseFour" class="accordion-body collapse">
                <div class="accordion-inner">
                 ATM:<br> 
-                - flights with the prototype, gathering aerial pictures of an area;<br>
-                - new parachutes tests, bottle dropping from a static elevated location and zero flight speed.<br>
+                - more flights, aerial pictures;<br>
+                - new parachutes tests.<br>
                 Near future:<br>
                 - target recognition in the aerial pictures;<br>
-                - upgrade camera and do more tests.<br>
+                - upgrade camera and more tests.<br>
                 Less close future:<br>
                 - bottle release mechanism (actually dropping the bottle from the plane);<br>
                 - automation (#dronesdronesdrones).<br>
                 Distant future:<br>
-                - ask Kenn ;) probably the documentation release and mass public adoption
+                - ask Kenn ;)
                </div>
              </div>
         </div>
