tuning font size in FAQ
layout

--- a/index.html
+++ b/index.html
@@ -288,11 +288,10 @@
 						  .the tools
 						  </a>
 		   			</div>
-		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
+		   			<div id="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-                <p>
   						  	For the competition we need to prepare multiple identical UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.<br>
-                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Currently making aerial pictures, testing antennas, gathering flight data. Firmware TauLabs, boards openpilot (did I got this part right?)</p>
+                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Currently making aerial pictures, testing antennas, gathering flight data. Firmware TauLabs, boards openpilot (did I got this part right?)
 					 	   </div>
 					   </div>
 		    	</div>
@@ -303,7 +302,7 @@
 						.the challenge
 						</a>
 					</div>
-					<div id="collapseTwo" name="collapseTwo" class="accordion-body collapse">
+					<div id="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
 							To take off, fly over the desert and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified & localized on a map, drop the bottle of water as close to it as possible. The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid). The plane must return to the starting point.<br>Delivery by plane is more effective then a quadcopter (or alike) thus the vehicle choice.
               <br>Next experiments involve parachute tests for the water dropping. 
