--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!-- todo2 async flow control -->
     <!-- v3.1
     if you reed source code, you will find everything in the comments  
-    issues on github are enabled. not sure how to link to github though to avoid code sharing ;)
+    issues on github are enabled. github.com/ot4me/bitstarter/ 
+    this said (link to github) code sharing enabled, please think of the honor code (&childrem)
+    stop terrorism
     this is the most complete, while still not auhtoritative, list of all addresses used for the project: 
     17P3fXbJwroibsdsf8L9Bxydzw8Hmwipaa
     139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
@@ -182,7 +184,7 @@
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$7.14</h3><p>of $3,000</p>
+  							<h3>$14.84</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -195,12 +197,13 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.238%;"></div>
-  					<div class="bar bar-warning" style="width: 99.762%;"></div>
+  					<div class="bar bar-success" style="width: 0.495%;"></div>
+  					<div class="bar bar-warning" style="width: 99.505%;"></div>
             <!--  current coinbase balance history properly rounded
                   $11.87  0.39566 %
                   $42.62  1.42066 % 
                   $7.14   0.238 % correction on Day 2 of leaderboard
+                  $14.84  0.49466 % Aug30
                   -->
   				</div>
   			</div>
@@ -244,7 +247,7 @@
           How cool would that be?<br>
           <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s research leads to UAVs flying over desert dropping bottled water on a people in need. Transporting 500 ml of water can be very efficiet using this approach. And now you can support the development and construction of those UAVs.<br>
+        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> is working on a UAV that will be flying over desert dropping water to people in need. And now you can support the development and construction of those UAVs.<br>
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
@@ -261,7 +264,7 @@
   		<div class="span5 copy">
   			<p>
 				Thanks to:<br> 
-				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a> for classes like this one (and<a href="http://www.stanford.edu/class/cs106a/">CS106a</a>, <a href="http://robertocsantana.com/?p=32">CS183</a>/<a href="http://startup.stanford.edu/">CS184</a> and <a href="http://itunes.stanford.edu/">...</a>);<br> 
+				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a>, 
 				<a href="http://www.strassen.lu/">Strassen</a> comune, Kenn, 
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
@@ -279,7 +282,7 @@
 
   	<div class="row-fluid faq">
 		  <div class="span10 offset1">
-			 <h3>FAQ</h3>
+			 <h3>.faq</h3>
 			 <div class="accordion" id="accordion2">
 				<!-- repetitive area start -->
 	    		<div class="accordion-group">
@@ -290,8 +293,9 @@
 		   			</div>
 		   			<div id="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-  						  	For the competition we need to prepare multiple identical UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.<br>
-                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Currently making aerial pictures, testing antennas, gathering flight data. Firmware TauLabs, boards openpilot (did I got this part right?)
+                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Firmware TauLabs, boards openpilot (did I got this part right?)<br>
+                 Currently making aerial pictures, testing the signal quality (antennas) and software.<br>
+                  For the competition we need to prepare multiple identical UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.
 					 	   </div>
 					   </div>
 		    	</div>
