--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     		padding: 2.5% 10%;
     	}
     	.linediv-l {
-    		border-bottom: 1px white solid;
+    		border-right: 1px white solid;
     	}
     	.linediv-r {
-    		border-top: 1px white solid;
+    		border-left: 1px white solid;
     	}
     }
     /* all form factors */
@@ -184,7 +184,7 @@
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$14.84</h3><p>of $3,000</p>
+  							<h3>$16.47</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -197,13 +197,14 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.495%;"></div>
-  					<div class="bar bar-warning" style="width: 99.505%;"></div>
+  					<div class="bar bar-success" style="width: 0.549%;"></div>
+  					<div class="bar bar-warning" style="width: 99.451%;"></div>
             <!--  current coinbase balance history properly rounded
                   $11.87  0.39566 %
                   $42.62  1.42066 % 
                   $7.14   0.238 % correction on Day 2 of leaderboard
                   $14.84  0.49466 % Aug30
+                  $16.47  0.549 % Sep1 $131/btc
                   -->
   				</div>
   			</div>
@@ -242,12 +243,12 @@
 	<div class="row-fluid section2"><a id="about"></a>
   		<div class="span5 offset1 copy copy-right">
   			<p>Imagine you're lost in the desert, thirsty with no water. It's hot there.<br>
-          This UAVcould find you and drop you a bottle of water.<br>
+          This UAVcould find you and drop you a bottle.<br>
           <br>
           How cool would that be?<br>
           <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> is working on a UAV that will be flying over desert dropping water to people in need. And now you can support the development and construction of those UAVs.<br>
+        This is about rescue aided with UAV that will fly over desert, search for you, drop water on you and return to tell your location. Here be soon more info about the development progress.<br>The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Capable of taking pictures and evaluating them.
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
@@ -265,7 +266,7 @@
   			<p>
 				Thanks to:<br> 
 				<a href="https://www.coursera.org/">Coursera.org</a> and <a href="http://stanford.edu">Stanford U</a>, 
-				<a href="http://www.strassen.lu/">Strassen</a> comune, Kenn, 
+				<a href="http://www.strassen.lu/">Strassen</a> comune, <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>, 
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
@@ -293,7 +294,7 @@
 		   			</div>
 		   			<div id="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-                 The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Firmware TauLabs, boards openpilot (did I got this part right?)<br>
+                 Firmware TauLabs, boards openpilot (did I got this part right?)<br>
                  Currently making aerial pictures, testing the signal quality (antennas) and software.<br>
                   For the competition we need to prepare multiple identical UAVs, each carying a camera, aviation electronics and a bottle of water. Each vehicle equipped with the whole set and capable of flying the challenge.
 					 	   </div>
