--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           How cool would that be?<br>
           <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        This is about rescue aided with UAV that will fly over desert, search for you, drop water on you and return to tell your location. Here be soon more info about the development progress.<br>The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas. Capable of taking pictures and evaluating them.
+        This is about rescue aided with UAV that will fly over desert, search for you, drop water on you and return to tell your location. Here be soon more info about the development progress.
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
@@ -263,6 +263,7 @@
   			<img class="img-polaroid" src="http://industrial.sk/img/4.png">
   		</div>
   		<div class="span5 copy">
+        <p>The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas.</p>
         <p><a id="contact"></a>
           Contact:<br>
           <a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
