--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <!-- if faq do not use <p> -->
   	<div class="row-fluid faq">
 		  <div class="span10 offset1">
-			 <h3>.faq</h3>
+			 <h3><a href="http://about.9to5passion.eu/">.faq</a></h3>
 			 <div class="accordion" id="accordion2">
 				<!-- repetitive area start -->
 	    		<div class="accordion-group">
