--- a/index.html
+++ b/index.html
@@ -150,14 +150,13 @@
   	</div>
 
   	<div class="container">
-  		<div class="row-fluid heading">
+  		<!--div class="row-fluid heading">
   			<div class="span12">
   				<h1>building UAVs for the next competition</h1>
   			</div>
-  		</div>
+  		</div -->
   	
-
-  	<div class="row-fluid subheading">
+  	<div class="row-fluid heading">
   		<div class="span12">
   			<p class="lead">delivering bottled water in the desert, on autopilot.</p>
   		</div>
@@ -287,10 +286,12 @@
 		   			</div>
 		   			<div id="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-                 Firmware TauLabs, board openpilot, surrently making aerial pictures (carying smartphone), testing antennas, software.<br><br>
+                 Firmware TauLabs, board openpilot, currently making aerial pictures (carying smartphone), testing antennas, software.<br><br>
                   Thanks to:<br> 
-                  <a href="https://www.coursera.org/">Coursera</a>, <a href="http://itunes.stanford.edu/">Stanford U</a>, 
-                  <a href="http://www.strassen.lu/">Strassen</a> comune, <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>, 
+                  <a href="https://www.coursera.org/">Coursera</a>,
+                  <a href="http://itunes.stanford.edu/">Stanford</a>, 
+                  <a href="http://www.strassen.lu/">Strassen</a> comune, 
+                  <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>, 
                   <a href="http://heroku.com/">heroku</a>, 
                   <a href="http://aws.amazon.com/">amazon</a>, 
                   <a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
