--- a/index.html
+++ b/index.html
@@ -162,14 +162,16 @@
   		</div>
   	</div>
 
-    <!--div class="row-fluid section">
-      <div class="span10 offset1 asset">
-        <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
-      </div>
-    </div-->
-
   	<div class="row-fluid pitch">
-  		<div class="span5 offset1 video">
+      <div class="row-fluid section">
+        <div class="span10 offset1 asset">
+          <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
+        </div>
+      </div>
+    </div>
+
+  <div class="row-fluid section1">
+    <div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
   		</div>
   		<!-- new actions div to contain statistics, order, and share buttons -->
@@ -210,34 +212,14 @@
 
   			<div class="span6 offset4 order">
   				<div class="row buttons">
-  					<!-- div class="span4 offset1" -->
+  					<!-- bitcoin donate -->
               <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-  					<!--/div-->
-            <!-- div class="span6 offset1">
-              <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-            </div-->
+            <!-- bitocin subscribe >
+              <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script-->
           </div>
   			</div>
-
-  			<div class="span8 offset3 social">
-				<!-- AddThis Button BEGIN -->
-				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-				<a class="addthis_button_preferred_1"></a>
-				<a class="addthis_button_preferred_2"></a>
-				<a class="addthis_button_preferred_3"></a>
-				<a class="addthis_button_preferred_4"></a>
-				<a class="addthis_button_compact"></a>
-				<a class="addthis_counter addthis_bubble_style"></a>
-				</div>
-				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
-				<!-- AddThis Button END -->
-  			</div>
-        <!-- div class="span6 offset4">
-          <p><br><font color="white">(*) might not be accurate</font><a id="about"></a></p>
-        </div-->
-  		</div>
-  	</div>
+      </div>
+    </div>
 
 	<div class="row-fluid section2"><a id="about"></a>
   		<div class="span5 offset1 copy copy-right">
