--- a/index.html
+++ b/index.html
@@ -162,64 +162,13 @@
   		</div>
   	</div>
 
-  	<div class="row-fluid pitch">
+  	<!--div class="row-fluid pitch">
       <div class="row-fluid section">
         <div class="span10 offset1 asset">
           <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
         </div>
       </div>
-    </div>
-
-  <div class="row-fluid section1">
-    <div class="span5 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
-  		</div>
-  		<!-- new actions div to contain statistics, order, and share buttons -->
-  		<div class="span5 actions">
-  			<div class="span8 offset2">
-  				<div class="statistics">
-  					<div class="span4">
-  						<div class="linediv-l">
-  							<h3>10</h3><p>backers</p>
-  						</div>
-  					</div>
-  					<div class="span4">
-  						<div class="linediv-c">
-  							<h3>$16.47</h3><p>of $3,000</p>
-  						</div>
-  					</div>
-  					<div class="span4">
-  						<div class="linediv-r">
-  							<h3>99</h3><p>days left</p>
-  						</div>
-  					</div>
-  				</div>
-  			</div>
-  			<div class="span10 offset1">
-  				<!-- progress bar -->
-  				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.549%;"></div>
-  					<div class="bar bar-warning" style="width: 99.451%;"></div>
-            <!--  current coinbase balance history properly rounded
-                  $11.87  0.39566 %
-                  $42.62  1.42066 % 
-                  $7.14   0.238 % correction on Day 2 of leaderboard
-                  $14.84  0.49466 % Aug30
-                  $16.47  0.549 % Sep1 $131/btc
-                  -->
-  				</div>
-  			</div>
-
-  			<div class="span6 offset4 order">
-  				<div class="row buttons">
-  					<!-- bitcoin donate -->
-              <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-            <!-- bitocin subscribe >
-              <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script-->
-          </div>
-  			</div>
-      </div>
-    </div>
+    </div-->
 
 	<div class="row-fluid section2"><a id="about"></a>
   		<div class="span5 offset1 copy copy-right">
@@ -254,6 +203,61 @@
         </p>        
   		</div>
   	</div>
+
+  <div class="row-fluid section1">
+    <div class="span5 asset offset1">
+      <img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
+    </div>
+<!-- new actions div to contain statistics, order, and share buttons -->
+    <div class="span5 actions">
+      <div class="span8 offset2">
+        <div class="statistics">
+          <div class="span4">
+            <div class="linediv-l">
+              <h3>10</h3><p>backers</p>
+            </div>
+          </div>
+          <div class="span4">
+            <div class="linediv-c">
+              <h3>$16.47</h3><p>of $3,000</p>
+            </div>
+           </div>
+           <div class="span4">
+            <div class="linediv-r">
+              <h3>99</h3><p>days left</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="span10 offset1">
+<!-- progress bar -->
+        <div class="thermometer progress active">
+          <div class="bar bar-success" style="width: 0.549%;">     
+          </div>
+          <div class="bar bar-warning" style="width: 99.451%;">
+            <!--  current coinbase balance history properly rounded
+                  $11.87  0.39566 %
+                  $42.62  1.42066 % 
+                  $7.14   0.238 % correction on Day 2 of leaderboard
+                  $14.84  0.49466 % Aug30
+                  $16.47  0.549 % Sep1 $131/btc
+                  -->
+          </div>
+        </div>
+      </div>
+<!--bitcoin button-->
+      <div class="span6 offset4 order">
+        <div class="row buttons">
+          <!-- bitcoin donate -->
+          <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+          <!-- bitocin subscribe >
+              <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script-->
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 <!-- if faq do not use <p> -->
   	<div class="row-fluid faq">
 		  <div class="span10 offset1">
