--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
     </div>
 <!-- new actions div to contain statistics, order, and share buttons -->
-    <div class="span5 offset1 actions">
+    <div class="span5 offset1 asset">
       <div class="span8 offset2">
         <div class="statistics">
           <div class="span4">
